New changes put/delete
